--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bookplan",
+  "name": "kutana",
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
@@ -21,6 +21,7 @@
     "bcryptjs": "^3.0.3",
     "expo": "~54.0.25",
     "expo-constants": "~18.0.10",
+    "expo-dev-client": "^6.0.18",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
