--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/bottom-tabs": "^7.4.0",
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
+    "@rnmapbox/maps": "^10.1.15",
     "@supabase/supabase-js": "^2.81.1",
     "@types/bcryptjs": "^2.4.6",
     "bcryptjs": "^3.0.3",
-    "expo": "~54.0.25",
+    "expo": "~54.0.26",
     "expo-constants": "~18.0.10",
-    "expo-dev-client": "^6.0.18",
+    "expo-dev-client": "~6.0.19",
     "expo-device": "~8.0.9",
     "expo-font": "~14.0.9",
     "expo-haptics": "~15.0.7",
@@ -31,7 +32,7 @@
     "expo-linking": "~8.0.9",
     "expo-location": "^19.0.7",
     "expo-notifications": "~0.32.13",
-    "expo-router": "~6.0.15",
+    "expo-router": "~6.0.16",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -41,7 +42,6 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
