--- a/eas.json
+++ b/eas.json
@@ -20,8 +20,14 @@
       }
     },
     "production": {
+      "distribution": "store",
+      "autoIncrement": true,
       "android": {
-        "buildType": "app-bundle"
+        "buildType": "app-bundle",
+        "image": "latest"
+      },
+      "env": {
+        "EXPO_PUBLIC_ENV": "production"
       }
     }
   },
