update app.config.js, app.json and eas.json
Pour la compatibilité avec ios

--- a/eas.json
+++ b/eas.json
@@ -9,19 +9,26 @@
       "android": {
         "buildType": "app-bundle"
       },
-      // "ios": {
-      //   "simulator": true
-      // }
+      "ios": {
+        "buildType" : "development",
+        "simulator": false
+      }
     },
     "preview": {
       "distribution": "internal",
       "android": {
         "buildType": "app-bundle"
+      },
+      "ios": {
+        "buildType" : "archive"
       }
     },
     "production": {
       "android": {
         "buildType": "app-bundle"
+      },
+      "ios": {
+        "buildType" : "archive"
       }
     }
   },
