--- a/eas.json
+++ b/eas.json
@@ -1,6 +1,7 @@
 {
   "cli": {
-    "version": ">= 5.0.0"
+    "version": ">= 5.0.0",
+    "appVersionSource": "remote"
   },
   "build": {
     "development": {
@@ -22,9 +23,14 @@
     "production": {
       "distribution": "store",
       "autoIncrement": true,
+
       "android": {
         "buildType": "app-bundle",
         "image": "latest"
+      },
+      "ios": {
+        "image": "latest",
+        "simulator": false
       },
       "env": {
         "EXPO_PUBLIC_ENV": "production"
