deploying on play store

--- a/eas.json
+++ b/eas.json
@@ -11,17 +11,8 @@
         "buildType": "app-bundle"
       },
       "ios": {
-        "buildType" : "development",
+        "image": "latest",
         "simulator": false
-      }
-    },
-    "preview": {
-      "distribution": "internal",
-      "android": {
-        "buildType": "app-bundle"
-      },
-      "ios": {
-        "buildType" : "archive"
       }
     },
     "production": {
