--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint"
   },
@@ -30,10 +30,10 @@
     "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-linear-gradient": "^15.0.7",
-    "expo-linking": "~8.0.9",
+    "expo-linking": "~8.0.11",
     "expo-location": "^19.0.7",
     "expo-notifications": "~0.32.13",
-    "expo-router": "~6.0.16",
+    "expo-router": "~6.0.20",
     "expo-splash-screen": "~31.0.11",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
