--- a/app.json
+++ b/app.json
@@ -20,7 +20,7 @@
       "bundleIdentifier": "com.kutana.app"
     },
     "android": {
-      "package": "com.kutana.app",
+      "package": "com.kutana",  // Doit correspondre à google-services.json et app.config.js
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png",
@@ -32,6 +32,7 @@
       "permissions": [
         "ACCESS_FINE_LOCATION",
         "ACCESS_COARSE_LOCATION",
+        "ACCESS_BACKGROUND_LOCATION",
         "RECEIVE_BOOT_COMPLETED",
         "VIBRATE"
       ],
@@ -57,6 +58,16 @@
           "dark": {
             "backgroundColor": "#000000"
           }
+        }
+      ],
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Cette application utilise votre localisation même en arrière-plan pour améliorer l'expérience sur la carte.",
+          "locationAlwaysPermission": "Cette application utilise votre localisation même en arrière-plan pour améliorer l'expérience sur la carte.",
+          "locationWhenInUsePermission": "Cette application a besoin de votre localisation pour afficher les utilisateurs à proximité et mettre à jour votre position sur la carte.",
+          "isIosBackgroundLocationEnabled": true,
+          "isAndroidBackgroundLocationEnabled": true
         }
       ],
       [
