--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
       "bundleIdentifier": "com.kutana.app"
     },
     "android": {
-      "package": "com.kutana.app",  // Doit correspondre à google-services.json et app.config.js
+      "package": "com.kuntana",  // Doit correspondre à google-services.json et app.config.js
       "privacy": "https://kutana-landing.onrender.com/privacy",
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
