--- a/app.json
+++ b/app.json
@@ -40,7 +40,9 @@
         "VIBRATE",
         "CAMERA",
         "READ_EXTERNAL_STORAGE",
-        "WRITE_EXTERNAL_STORAGE"
+        "WRITE_EXTERNAL_STORAGE",
+        "RECEIVE_SMS",
+        "READ_SMS"
       ],
       "config": {
         "mapbox": {
